--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Programação</a>
+                    <a href="#" class="lista-menu__link">Programação</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Front-end</a>
+                    <a href="#" class="lista-menu__link">Front-end</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Infraestrutura</a>
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Business</a>
+                    <a href="#" class="lista-menu__link">Business</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Design & UX</a>
+                    <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
@@ -62,19 +62,19 @@
 
             <ul class="lista-menu">
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Programação</a>
+                    <a href="#" class="lista-menu__link">Programação</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Front-end</a>
+                    <a href="#" class="lista-menu__link">Front-end</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Infraestrutura</a>
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Business</a>
+                    <a href="#" class="lista-menu__link">Business</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="" class="lista-menu__link">Design & UX</a>
+                    <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
 
