--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript assertivo da alura books"></div>
                 <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro Guia Front end"></div>
                 <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol"></div>
-                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre acessibilidade"></div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
                 ...
                 </div>
             
