--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                     </div>
                     <!-- 2º coluna -->
-                    <img src="img/Logo-angular.svg" alt="Logotipo Angular" class="descricao__imagem">
+                    <img src="img/Angular.svg" alt="Logotipo Angular" class="descricao__imagem">
                 </div>
 
                 <!-- 2º linha -->
